# podboy

./: Cargo.toml  README.md  install.sh
.fleet/: run.json
src/: bash.rs  lib.rs  main.rs  processing.rs  systemd.rs
src/processing/: ha.rs  mod.rs  result.rs
src/system/: bash.rs  podman.rs  systemd.rs
