[package]
name = "podboy"
version = "0.1.7"
edition = "2021"
description = "Availability CLI for podman containers"
authors = ["ToastXC contact@toastxc.xyz"]
license = "GPL-3.0-only"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["cargo"] }
